changed push trigger to master

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,7 @@ name: Build, Test and Release Containerimage
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 jobs:
