--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,8 @@
       "matchUpdateTypes": ["major"],
       "groupName": "{{{depNameSanitized}}}#{{currentVersion}}#{{newVersion}}-test1",
       "groupSlug": "{{{depNameSanitized}}}#{{currentVersion}}#{{newVersion}}-test",
-      "branchName": "{{groupSlug}}/{{depName}}"
+      "branchName": "{{groupSlug}}/{{depName}}",
+      "branchPrefix": "test/"
     }
   ]
 }
