--- a/renovate.json
+++ b/renovate.json
@@ -1,13 +1,3 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "packageRules": [
-    {
-      "matchDepTypes": ["*quarkus*"],
-      "matchUpdateTypes": ["major"],
-      "groupName": "{{{depNameSanitized}}}#{{currentVersion}}#{{newVersion}}-test1",
-      "groupSlug": "{{{depNameSanitized}}}#{{currentVersion}}#{{newVersion}}-test",
-      "branchName": "{{groupSlug}}/{{depName}}",
-      "branchPrefix": "test/"
-    }
-  ]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
 }
